[package]
name = "jellyroller"
version = "1.0.0"
edition = "2021"
description = "The CLI Jellyfin Controller Utility for Linux and Windows."
repository = "https://github.com/LSchallot/JellyRoller"
readme = "README.md"
license = "GPL-2.0"
keywords = ["jellyroller", "jellyfin"]
categories = ["command-line", "jellyfin"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.39" 
clap = { version = "4.3.19", features = ["derive"] }
confy = "0.6.0"
serde = "1.0.144"
serde_derive = "1.0.144"
serde_json = "1.0.85"
reqwest = { version = "0.12.4", features = ["blocking", "json", "rustls-tls"], default-features = false }
rpassword = "7.3.1"
url = "2.2.2"
comfy-table = "7.0.1"   
image = "0.25.1"
base64 = "0.22.1"
csv = "1.3.1"
clap_complete = "4.5.42"
prop_reader = "0.1.0"      
