[package]
name = "jellyroller"
version = "1.0.0-RC1"
edition = "2021"
description = "The CLI Jellyfin Controller Utility for Linux and Windows."
repository = "https://github.com/LSchallot/JellyRoller"
readme = "README.md"
license = "GPL-2.0"
keywords = ["jellyroller", "jellyfin"]
categories = ["command-line", "jellyfin"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.42" 
clap = { version = "4.5.47", features = ["derive"] }
confy = "0.6.1"
serde = "1.0.224"
serde_derive = "1.0.224"
serde_json = "1.0.145"
reqwest = { version = "0.12.23", features = ["blocking", "json", "rustls-tls"], default-features = false }
rpassword = "7.4.0"
url = "2.5.7"
comfy-table = "7.2.1"   
image = "0.25.8"
base64 = "0.22.1"
csv = "1.3.1"
clap_complete = "4.5.57"
prop_reader = "0.2.0"
